Fixed the layout Issue Make sure whenever you write a template, all the opening <div> tags are closed accordingly. And note, if their is a profile/playlist/song pic their should or must be same name for that entity.

--- a/src/static/css/user.css
+++ b/src/static/css/user.css
@@ -82,8 +82,20 @@ tr{
 }
 .submit{
 	margin-left: 400px;
-	margin-top: 25px;
+	margin-top: 5px;
 }
 .placesector-3{
 	margin-left: 5px;
+}
+.edit-modal{
+	width: 800px;
+}
+.center{
+	width: 400px;
+	margin-left: 180px;
+	margin-top: 50px;
+
+}
+.spacing{
+	margin-top: 25px;
 }
